Improved design as web

--- a/Sources/EpaySDK/Resources/ru.lproj/Localizable.strings
+++ b/Sources/EpaySDK/Resources/ru.lproj/Localizable.strings
@@ -18,22 +18,22 @@
 "monthly_autopayment_question" = "Разрешить ежемесячный автоплатеж?";
 "quarterly_autopayment_question" = "Разрешить ежеквартальный автоплатеж?";
 "cancel" = "Отмена";
-"invoice_id" = "Номер заказа платежа: ";
+"invoice_id" = "Заказ № ";
 "reference" = "Квитанция №";
 "bonuses_fmt" = " GO!";
 "pay_amount_fmt" = "Оплатить";
 "pay_credit" = "Оформить кредит";
 "pay_installment" = "Оформить рассрочку";
 "confirm_subscribe" = "Потвердить подписку";
-"card_month_hint" = "Месяц (MM)";
-"card_year_hint" = "Год (ГГ)";
+"card_month_hint" = "MM";
+"card_year_hint" = "ГГ";
 "card_cvv_hint" = "CVV";
-"card_number_hint" = "Номер на карте"; //
+"card_number_hint" = "Номер карты"; //
 "card_cvv_hint_title" = "Что такое CVV"; //
 "card_cvv_hint_message" = "Трехзначная цифра на обратной стороне карты в поле для подписи"; //
 "camera_title" = "Использование камеры запрещено";
 "camera_message" = "Использование камеры может быть разрешено в настройках вашего телефона";
-"card_client_name_hint" = "Имя и Фамилия на карте";
+"card_client_name_hint" = "Имя на карте";
 "email_required_hint" = "Ваш E-mail (обязательно)";
 "phone_hint" = "Ваш контактный телефон";
 "intro_text" = "На проведение платежа выделяется 20 минут или 3 попытки.";
